# decentra-chat

./: Cargo.toml  ISSUE_15_PLACEHOLDER.md  ISSUE_2_PLACEHOLDER.md  ISSUE_4_PLACEHOLDER.md  ISSUE_52_PLACEHOLDER.md  README.md  index.html
src/: lib.rs
tests/: github_integration.rs
