[package]
name = "decentra-chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "Window", 
    "Document", 
    "Element", 
    "HtmlElement", 
    "Node",
    "console",
    "Storage",
    "History",
    "Location"
]}
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.37"
gloo-utils = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"